/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

import "system/guid.proto";
import "dolittle/timeseries/datapoints/tag_data_point.proto";

package dolittle.timeseries.connectors.client;

option csharp_namespace = "Dolittle.TimeSeries.Runtime.Connectors.Grpc.Client";

message StreamRequest {
    guid connectorId = 1;
    repeated string tags = 2;
}

message StreamTagDataPoints {
    repeated dolittle.timeseries.datapoints.TagDataPoint DataPoints=1;
}

// Represents the service for working with a connector that is stream based
service StreamConnector {
    rpc Connect(StreamRequest) returns(stream StreamTagDataPoints) {}
}